--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Language" content="en">
     <title>FHIR Patient Summary Generator</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="icon" href="./static/img/fav.icn" type="image/x-icon">
 </head>
 
 <body>
@@ -73,5 +78,5 @@
         crossorigin="anonymous"></script>
     <script>
 
-</body >
-</html >
+        </body >
+    </html >
