Enhance index.html layout with download section for HL7 CDA document

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,18 @@
 {% extends "base.html" %} {% block content %}
 
-<div class="welcome">
-    <h1>Welcome to the FHIR Patient Summary Application</h1>
-    <p>This application is designed to create a patient summary FHIR document, which will be presented as a JSON file.</p>
-    <a href="/fhir/patient_summary" target="_blank" btn btn-primary">View Patient Summary</a>
+<div class="container">
+    <div class="welcome">
+        <h1>Welcome to the FHIR Patient Summary Application</h1>
+        <p>This application is designed to create a patient summary FHIR document, which will be presented as a JSON file.</p>
+        <a href="/fhir/patient_summary" target="_blank" class="btn btn-secondary">View Patient Summary</a>
+    </div>
+    <br>
+    <div class="download">
+        <h2>Download HL7 CDA Document</h2>
+        <p>🚧 Work in progress: You can also download a converted copy of the FHIR patient summary as an HL7 CDA document.</p>
+        <a href="/hl7/patient_summary/cda" target="_blank" class="btn btn-secondary">Download HL7 CDA</a>
+    </div>
+
 </div>
 
 {% endblock %}
