Update navbar text to reflect FHIR Patient Summary Test

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                         </svg> Home</a>
                 </div>
                 <div id="navbarText">
-                    <span class="navbar-text">HL7 Patient Summary CDA Generator</span>
+                    <span class="navbar-text">HL7 FHIR Patient Summary Test</span>
                 </div>
                 {% else %}
                 <div class="navbar-header">
@@ -47,7 +47,7 @@
                         </svg></a>
                 </div>
                 <div id="navbarText">
-                    <span class="navbar-text">HL7 Patient Summary CDA Generator</span>
+                    <span class="navbar-text">HL7 FHIR Patient Summary Test</span>
                 </div>
 
                 {% endif %}
