Refactor welcome message and buttons in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,23 +2,25 @@
 
 <div class="container">
     <div class="welcome">
-        <h1>Welcome to the FHIR Patient Summary Application</h1>
-        <p>This application is designed to create a hard-coded patient summary FHIR document, which will be presented as
+        <h1>FHIR Patient Summary Development Application</h1>
+        <p>This application is designed to create a hard-coded FHIR patient document bundle, which will be presented as
             a JSON file.</p>
-        <a href="/hl7/patient_summary/fhir/json" target="_blank" class="btn btn-secondary">View Patient Summary</a>
+        <a href="/hl7/patient_summary/fhir/json" target="_blank" class="btn btn-secondary" type="button">View Patient
+            Bundle</a>
     </div>
     <br>
     <div class="">
         <h2>Find HL7 FHIR Patient Summary on HAPI</h2>
         <p>Select a FHIR patient summary from HAPI FHIR.</p>
-        <a href="/hl7/patient_summary/fhir/select" target="_blank" class="btn btn-secondary">FHIR Search Page</a>
+        <a href="/hl7/patient_summary/fhir/select" target="_blank" class="btn btn-secondary" type="button">🔥 FHIR
+            Search Page</a>
     </div>
     <br>
     <div class="download">
         <h2>Download HL7 CDA Document</h2>
         <p>🚧 Work in progress: You can also download a converted copy of the FHIR patient summary as an HL7 CDA
             document.</p>
-        <a href="#" target="_blank" class="btn btn-secondary">Download HL7 CDA</a>
+        <button href="#" target="_blank" class="btn btn-secondary" type="button" disabled>Download HL7 CDA</button>
     </div>
 
 
