Refactor fhir_client.py to use SyncFHIRClient and save patient summary

--- a/templates/fhir_patient_list.html
+++ b/templates/fhir_patient_list.html
@@ -25,10 +25,10 @@
                     <label for="custom_patient_id">Enter Patient ID:</label>
                     <input type="text" id="custom_patient_id" name="custom_patient_id" placeholder="Enter Patient ID">
                 </div>
-                <br><br>                
-                </select>
-                <P>Please see the <a href="https://hapi.fhir.org/" target="_blank" rel="noopener noreferrer">HAPI Bundle Builder</a> to check the patient ID</P>
-                <p>Note that HAPI Bundle Builder is using a public service.  Do not upload any sensitive information</p>
+                <br><br>
+                <p>Please see the <a href="https://hapi.fhir.org/" target="_blank" rel="noopener noreferrer">HAPI Bundle
+                        Builder</a> to check the patient ID</P>
+                <p>Note that HAPI Bundle Builder is using a public service. Do not upload any sensitive information</p>
                 <br><br>
                 <button type="submit" class="button">Search</button>
                 <br><br>
@@ -47,6 +47,7 @@
         }
     });
 </script>
+
 
 
 {% endblock %}
