--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -190,3 +190,14 @@ p.lost {
   font-size: 14px;
   margin-bottom: 10px;
 }
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.column {
+  padding: 10px;
+}
