--- a/templates/fhir_patient_summary.html
+++ b/templates/fhir_patient_summary.html
@@ -8,56 +8,22 @@
             <div class="card-body">
                 <h2>Data Selection</h2>
                 <div class="column">
-                    <table>
-                        <tr>
-                            <th>ID</th>
-                            <td>{{ patient.id }}</td>
-                        </tr>
-                        <tr>
-                            <th>Name</th>
-                            <td>{{ patient.name }}</td>
-                        </tr>
-                        <tr>
-                            <th>Birth Date</th>
-                            <td>{{ patient.birth_date }}</td>
-                        </tr>
-                        <tr>
-                            <th>Gender</th>
-                            <td>{{ patient.gender }}</td>
-                        </tr>
-                        <tr>
-                            <th>Address</th>
-                            <td>{{ patient.address }}</td>
-                        </tr>
-                        <tr>
-                            <th>Phone</th>
-                            <td>{{ patient.phone }}</td>
-                        </tr>
-                        <tr>
-                            <th>Email</th>
-                            <td>{{ patient.email }}</td>
-                        </tr>
-                        <tr>
-                            <th>Source</th>
-                            <td>{{ patient.source }}</td>
-                        </tr>
-                        <tr>
-                            <th>Version ID</th>
-                            <td>{{ patient.versionId }}</td>
-                        </tr>
-                        <tr>
-                            <th>Last Updated</th>
-                            <td>{{ patient.last_updated }}</td>
-                        </tr>
-                        <tr>
-                            <th>Profile</th>
-                            <td>{{ patient.profile|safe }}</td>
-                        </tr>
-                        <tr>
-                            <th>Active</th>
-                            <td>{{ patient.active }}</td>
-                        </tr>
-                    </table>
+
+                    <ul>
+                        <li><strong>ID:</strong> {{ patient.id }}</li>
+                        <li><strong>Name:</strong> {{ patient.name }}</li>
+                        <li><strong>Birth Date:</strong> {{ patient.birth_date }}</li>
+                        <li><strong>Gender:</strong> {{ patient.gender }}</li>
+                        <li><strong>Address:</strong> {{ patient.address }}</li>
+                        <li><strong>Phone:</strong> {{ patient.phone }}</li>
+                        <li><strong>Email:</strong> {{ patient.email }}</li>
+                        <li><strong>Source:</strong> {{ patient.source }}</li>
+                        <li><strong>Version ID:</strong> {{ patient.versionId }}</li>
+                        <li><strong>Last Updated:</strong> {{ patient.last_updated }}</li>
+                        <li><strong>Profile:</strong> {{ patient.profile|safe }}</li>
+                        <li><strong>Active:</strong> {{ patient.active }}</li>
+                    </ul>
+                    <a href="{{ url_for('edit_fhir_patient', patient_id=patient.id) }}" class="btn btn-secondary" type="button">Edit</a>
                 </div>
             </div>
         </div>
