Update search button class for consistency in FHIR patient list template

--- a/templates/fhir_patient_list.html
+++ b/templates/fhir_patient_list.html
@@ -30,7 +30,7 @@
                         Builder</a> to check the patient ID</P>
                 <p>Note that HAPI Bundle Builder is using a public service. Do not upload any sensitive information</p>
                 <br><br>
-                <button type="submit" class="btn btn-secondary">Search</button>
+                <button type="submit" class="button">Search</button>
                 <br><br>
             </form>
             <script>
