--- a/templates/fhir_patient_summary.html
+++ b/templates/fhir_patient_summary.html
@@ -41,11 +41,13 @@
         </div>
     </div>
 
-    <a href="{{ url_for('fhir_patient_list') }}">Back to Patient List</a>
+    <button class="button" onclick="window.location.href='{{ url_for('fhir_patient_list') }}'">Back to Patient
+        List</button>
 </div>
 
 <script>
     var data = {{ patient_json| tojson | safe }};
     document.getElementById("json").innerHTML = JSON.stringify(data, null, 2);
 </script>
+
 {% endblock %}
