--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -104,6 +104,10 @@ main {
   margin: 5px 0px;
 }
 
+.button-inline {
+  display: inline-block;
+}
+
 .button:hover,
 .button-link:hover {
   background-color: #555;
