Refactor button layout in edit FHIR patient template for improved inline display

--- a/templates/edit_fhir_patient.html
+++ b/templates/edit_fhir_patient.html
@@ -44,15 +44,16 @@
                 <input type="email" name="email" id="email"
                     value="{{ patient.telecom[1].value if patient.telecom and len(patient.telecom) > 1 and patient.telecom[1].system == 'email' else '' }}">
                 <br>
-                <button class="button" type="submit">Save Changes</button>
-                <button class="button" type="button"
-                    onclick="window.location.href='{{ url_for('fhir_patient_summary', patient_id=patient.id) }}'">Cancel</button>
+                <div class="button-inline">
+                    <button class="button" type="submit">Save</button>
+
+                    <button class="button" type="button"
+                        onclick="window.location.href='{{ url_for('fhir_patient_summary', patient_id=patient.id) }}'">Cancel</button>
+
+                </div>
             </form>
         </div>
     </div>
-
-
-    <a href="{{ url_for('fhir_patient_summary', patient_id=patient.id) }}">Back to Patient Summary</a>
 
 </div>
 
