Add return button to FHIR template for navigation

--- a/templates/fhir_template.html
+++ b/templates/fhir_template.html
@@ -9,6 +9,7 @@
                 <pre id="json"></pre>
             </div>
         </div>
+        <button class="button" onclick="window.location.href='{{ url_for('index') }}'">Return</button>
     </div>
 
 </div>
