--- a/templates/edit_fhir_patient.html
+++ b/templates/edit_fhir_patient.html
@@ -6,47 +6,102 @@
     <div class="card">
         <div class="card-body">
             <form action="{{ url_for('edit_fhir_patient', patient_id=patient.id) }}" method="post">
-                <label for="family_name">Last Name:</label>
-                <input type="text" name="family_name" id="family_name"
-                    value="{{ patient.name[0].family if patient.name else '' }}">
+                <div class="form-group">
+                    <label for="family_name">Last Name:</label>
+                    <input type="text" class="form-control" name="family_name" id="family_name"
+                        value="{{ patient.name[0].family if patient.name else '' }}">
+                </div>
 
-                <label for="given_name">First Name:</label>
-                <input type="text" name="given_name" id="given_name"
-                    value="{{ patient.name[0].given[0] if patient.name and patient.name[0].given else '' }}">
+                <div class="form-group">
+                    <label for="given_name">First Name:</label>
+                    <input type="text" class="form-control" name="given_name" id="given_name"
+                        value="{{ patient.name[0].given[0] if patient.name and patient.name[0].given else '' }}">
+                </div>
 
-                <label for="birth_date">Birth Date:</label>
-                <input type="date" name="birth_date" id="birth_date" type="date" value="{{ patient.birthDate }}">
+                <div class="form-group">
+                    <label for="birth_date">Birth Date:</label>
+                    <input type="date" class="form-control" name="birth_date" id="birth_date" type="date"
+                        value="{{ patient.birthDate }}">
+                </div>
 
-                <label for="gender">Gender:</label>
-                <input type="text" name="gender" id="gender" value="{{ patient.gender }}">
+                <div class="form-group">
+                    <label for="gender">Gender:</label>
+                    <input type="text" class="form-control" name="gender" id="gender" value="{{ patient.gender }}">
+                </div>
 
-                <label for="address_line">Address Line:</label>
-                <input type="text" name="address_line" id="address_line"
-                    value="{{ patient.address[0].line[0] if patient.address else '' }}">
+                <div class="form-group">
+                    <label for="address_line">Address Line:</label>
+                    <input type="text" class="form-control" name="address_line" id="address_line"
+                        value="{{ patient.address[0].line[0] if patient.address else '' }}">
+                </div>
 
-                <label for="city">City:</label>
-                <input type="text" name="city" id="city"
-                    value="{{ patient.address[0].city if patient.address else '' }}">
+                <div class="form-group">
+                    <label for="city">City:</label>
+                    <input type="text" class="form-control" name="city" id="city"
+                        value="{{ patient.address[0].city if patient.address else '' }}">
+                </div>
 
-                <label for="state">State:</label>
-                <input type="text" name="state" id="state"
-                    value="{{ patient.address[0].state if patient.address else '' }}">
+                <div class="form-group">
+                    <label for="state">State:</label>
+                    <input type="text" class="form-control" name="state" id="state"
+                        value="{{ patient.address[0].state if patient.address else '' }}">
+                </div>
 
-                <label for="postal_code">Postal Code:</label>
-                <input type="text" name="postal_code" id="postal_code"
-                    value="{{ patient.address[0].postalCode if patient.address else '' }}">
+                <div class="form-group">
+                    <label for="postal_code">Postal Code:</label>
+                    <input type="text" class="form-control" name="postal_code" id="postal_code"
+                        value="{{ patient.address[0].postalCode if patient.address else '' }}">
+                </div>
 
-                <label for="phone">Phone:</label>
-                <input type="tel" name="phone" id="phone"
-                    value="{{ patient.telecom[0].value if patient.telecom and patient.telecom[0].system == 'phone' else '' }}">
+                <div class="form-group">
+                    <label for="phone">Phone:</label>
+                    <input type="tel" class="form-control" name="phone" id="phone"
+                        value="{{ patient.telecom[0].value if patient.telecom[0].system == 'phone' else '' }}">
+                </div>
 
-                <label for="email">Email:</label>
-                <input type="email" name="email" id="email"
-                    value="{{ patient.telecom[1].value if patient.telecom and len(patient.telecom) > 1 and patient.telecom[1].system == 'email' else '' }}">
+                {% if not patient.telecom[0].value and patient.telecom[0].system != 'phone' %}
+                {% else %}
+                <div class="form-group
+                    <label for=" phone_use">Phone Type</label>
+                    <select class="form-control" id="phone_use" name="phone_use" required>
+                        {% if patient.telecom[0].use == 'home' %}
+                        <option value="home" selected>Home</option>
+                        {% else %}
+                        <option value="work" selected>Work</option>
+                        {% endif %}
+                        <option value="home">Home</option>
+                        <option value="work">Work</option>
+                    </select>
+                </div>
+                {% endif %}
+
+
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" class="form-control" name="email" id="email"
+                        value="{{ patient.telecom[1].value if patient.telecom[1].system == 'email' else '' }}">
+                </div>
+
+                {% if not patient.telecom[1].value and patient.telecom[1].system != 'email' %}
+                {% else %}
+                <div class="form-group">
+                    <label for="email_use">Email Type</label>
+                    <select class="form-control" id="email_use" name="email_use" required>
+                        {% if patient.telecom[1].use == 'home' %}
+                        <option value="home" selected>Home</option>
+                        {% else %}
+                        <option value="work" selected>Work</option>
+                        {% endif %}
+                        <option value="home">Home</option>
+                        <option value="work">Work</option>
+                    </select>
+                </div>
+                {% endif %}
+
+
                 <br>
                 <div class="button-inline">
                     <button class="button" type="submit">Save</button>
-
                     <button class="button" type="button"
                         onclick="window.location.href='{{ url_for('fhir_patient_summary', patient_id=patient.id) }}'">Cancel</button>
 
