--- a/templates/fhir_patient_list.html
+++ b/templates/fhir_patient_list.html
@@ -31,6 +31,8 @@
                 <p>Note that HAPI Bundle Builder is using a public service. Do not upload any sensitive information</p>
                 <br><br>
                 <button type="submit" class="button">Search</button>
+                <button class="button" type="button"
+                    onclick="window.location.href='{{ url_for('new_fhir_patient') }}'">New Patient</button>
                 <br><br>
             </form>
             <script>
