--- a/templates/fhir_patient_summary.html
+++ b/templates/fhir_patient_summary.html
@@ -24,8 +24,9 @@
                         <li><strong>Active:</strong> {{ patient.active }}</li>
                     </ul>
                     <div class="button-inline">
-                        <button onclick="window.location.href='{{ url_for('edit_fhir_patient', patient_id=patient.id) }}'" class="button"
-                            type="button">Edit</button>
+                        <button
+                            onclick="window.location.href='{{ url_for('edit_fhir_patient', patient_id=patient.id) }}'"
+                            class="button" type="button">Edit</button>
                         <button onclick="window.location.href='{{ url_for('fhir_patient_list') }}'" class="button"
                             type="button">Return</button>
                     </div>
@@ -35,7 +36,7 @@
 
         <div class="card">
             <div class="card-body">
-                <h2>Original FHIR JSON Structure</h2>
+                <h2>Result Body Payload</h2>
                 <div class="column">
                     <pre id="json"></pre>
                 </div>
