--- a/templates/new_fhir_patient.html
+++ b/templates/new_fhir_patient.html
@@ -17,6 +17,12 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="official_name">Is the official name?</label>
+                    <input type="checkbox" class="form-check-input form-control" name="official_name" id="official_name"
+                        value="official">
+                </div>
+
+                <div class="form-group">
                     <label for="birth_date">Date of Birth</label>
                     <input type="date" class="form-control" id="birth_date" name="birth_date" required>
                 </div>
@@ -32,6 +38,14 @@
                 <div class="form-group">
                     <label for="address_line">Address</label>
                     <input type="text" class="form-control" id="address_line" name="address_line" required>
+                </div>
+
+                <div class="form-group">
+                    <select name="address_type" class="form-control" id="address_type" required>
+                        <option value="" disabled selected>Select</option>
+                        <option value="home">Home</option>
+                        <option value="work">Work</option>
+                    </select>
                 </div>
 
                 <div class="form-group">
