--- a/templates/edit_fhir_patient.html
+++ b/templates/edit_fhir_patient.html
@@ -42,6 +42,19 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="use_address">Address Type</label>
+                    <select name="address_type" class="form-control" id="address_type" required>
+                        {% if patient.address[0].use == 'home' %}
+                        <option value="home" selected>Home</option>
+                        {% else %}
+                        <option value="work" selected>Work</option>
+                        {% endif %}
+                        <option value="home">Home</option>
+                        <option value="work">Work</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
                     <label for="city">City:</label>
                     <input type="text" class="form-control" name="city" id="city"
                         value="{{ patient.address[0].city if patient.address else '' }}">
