--- a/templates/new_fhir_patient.html
+++ b/templates/new_fhir_patient.html
@@ -17,7 +17,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="official_name">Is the official name?</label>
+                    <label for="official_name">Official name?</label>
                     <input type="checkbox" class="form-check-input form-control" name="official_name" id="official_name"
                         value="official">
                 </div>
@@ -41,7 +41,7 @@
                 </div>
 
                 <div class="form-group">
-                    <select name="address_type" class="form-control" id="address_type" required>
+                    <select name="address_use" class="form-control" id="address_use" required>
                         <option value="" disabled selected>Select</option>
                         <option value="home">Home</option>
                         <option value="work">Work</option>
