Update label for official name checkbox in FHIR patient edit form

--- a/templates/edit_fhir_patient.html
+++ b/templates/edit_fhir_patient.html
@@ -19,7 +19,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="official_name">Is the official name?</label>
+                    <label for="official_name">Official name?</label>
                     <input type="checkbox" class="form-check-input form-control" name="official_name" id="official_name"
                         value="official" {% if patient.name[0].use=='official' %} checked {% endif %}>
                 </div>
