--- a/templates/edit_fhir_patient.html
+++ b/templates/edit_fhir_patient.html
@@ -6,23 +6,26 @@
     <div class="card">
         <div class="card-body">
             <form action="{{ url_for('edit_fhir_patient', patient_id=patient.id) }}" method="post">
-                <div class="form-group">
-                    <label for="family_name">Last Name:</label>
-                    <input type="text" class="form-control" name="family_name" id="family_name"
-                        value="{{ patient.name[0].family if patient.name else '' }}">
+                <div class="name-section">
+                    <div class="form-group">
+                        <label for="family_name">Last Name:</label>
+                        <input type="text" class="form-control" name="family_name" id="family_name"
+                            value="{{ patient.name[0].family if patient.name else '' }}">
+                    </div>
+    
+                    <div class="form-group">
+                        <label for="given_name">First Name:</label>
+                        <input type="text" class="form-control" name="given_name" id="given_name"
+                            value="{{ patient.name[0].given[0] if patient.name and patient.name[0].given else '' }}">
+                    </div>
+    
+                    <div class="form-group right">
+                        <p for="official_name">Official name?</p>
+                        <input type="checkbox" class="form-check-input form-control right" name="official_name" id="official_name"
+                            value="official" {% if patient.name[0].use=='official' %} checked {% endif %}>
+                    </div>
                 </div>
 
-                <div class="form-group">
-                    <label for="given_name">First Name:</label>
-                    <input type="text" class="form-control" name="given_name" id="given_name"
-                        value="{{ patient.name[0].given[0] if patient.name and patient.name[0].given else '' }}">
-                </div>
-
-                <div class="form-group">
-                    <label for="official_name">Official name?</label>
-                    <input type="checkbox" class="form-check-input form-control" name="official_name" id="official_name"
-                        value="official" {% if patient.name[0].use=='official' %} checked {% endif %}>
-                </div>
 
                 <div class="form-group">
                     <label for="birth_date">Birth Date:</label>
