--- a/templates/edit_fhir_patient.html
+++ b/templates/edit_fhir_patient.html
@@ -45,8 +45,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="use_address">Address Type</label>
-                    <select name="address_type" class="form-control" id="address_type" required>
+                    <label for="address_use">Address Type</label>
+                    <select name="address_use" class="form-control" id="address_use" required>
                         {% if patient.address[0].use == 'home' %}
                         <option value="home" selected>Home</option>
                         {% else %}
