--- a/templates/new_fhir_patient.html
+++ b/templates/new_fhir_patient.html
@@ -16,38 +16,40 @@
                     <input type="text" class="form-control" id="family_name" name="family_name" required>
                 </div>
 
-                <div class="form-group">
-                    <label for="official_name">Official name?</label>
+                <div class="form-group right">
                     <input type="checkbox" class="form-check-input form-control" name="official_name" id="official_name"
                         value="official">
+                    <label for="official_name">Tick if official name</label>
                 </div>
 
-                <div class="form-group">
-                    <label for="birth_date">Date of Birth</label>
-                    <input type="date" class="form-control" id="birth_date" name="birth_date" required>
-                </div>
-                <div class="form-group">
-                    <label for="gender">Gender</label>
-                    <select class="form-control" id="gender" name="gender" required>
-                        <option value="" disabled selected>Select</option>
-                        <option value="male">Male</option>
-                        <option value="female">Female</option>
-                        <option value="other">Other</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="address_line">Address</label>
-                    <input type="text" class="form-control" id="address_line" name="address_line" required>
-                </div>
-
-                <div class="form-group">
-                    <select name="address_use" class="form-control" id="address_use" required>
-                        <option value="" disabled selected>Select</option>
-                        <option value="home">Home</option>
-                        <option value="work">Work</option>
-                    </select>
+                <div class="row g-2">
+                    <div class="col-md">
+                        <div class="form-group">
+                            <label for="birth_date">Date of Birth</label>
+                            <input type="date" class="form-control" id="birth_date" name="birth_date" required>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="form-group">
+                            <label for="gender">Gender</label>
+                            <select class="form-control" id="gender" name="gender" required>
+                                <option value="" disabled selected>Select</option>
+                                <option value="male">Male</option>
+                                <option value="female">Female</option>
+                                <option value="other">Other</option>
+                            </select>
+                        </div>
+                    </div>
                 </div>
 
+
+                <div class="form-group">
+                    <div class="form-group">
+                        <label for="address_line">Address</label>
+                        <textarea type="text" class="form-control" id="address_line" rows="3" name="address_line"
+                            required></textarea>
+                    </div>
+                </div>
                 <div class="form-group">
                     <label for="city">City</label>
                     <input type="text" class="form-control" id="city" name="city" required>
@@ -60,34 +62,55 @@
                     <label for="postal_code">Postal Code</label>
                     <input type="text" class="form-control" id="postal_code" name="postal_code" required>
                 </div>
-
                 <div class="form-group">
-                    <label for="phone">Phone</label>
-                    <input type="tel" class="form-control" id="phone" name="phone" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="phone_use">Phone Type</label>
-                    <select class="form-control" id="phone_use" name="phone_use" required>
+                    <label for="address_use">Select address type:</label>
+                    <select name="address_use" class="form-control" id="address_use" required>
                         <option value="" disabled selected>Select</option>
                         <option value="home">Home</option>
                         <option value="work">Work</option>
                     </select>
                 </div>
 
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" name="email" required>
+
+
+                <div class="row g-2">
+                    <div class="col-md">
+                        <div class="form-group">
+                            <label for="phone">Phone</label>
+                            <input type="tel" class="form-control" id="phone" name="phone" required>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="form-group">
+                            <label for="phone_use">Phone Type</label>
+                            <select class="form-control" id="phone_use" name="phone_use" required>
+                                <option value="" disabled selected>Select</option>
+                                <option value="home">Home</option>
+                                <option value="work">Work</option>
+                            </select>
+                        </div>
+                    </div>
                 </div>
 
-                <div class="form-group">
-                    <label for="email_use">Email Type</label>
-                    <select class="form-control" id="email_use" name="email_use" required>
-                        <option value="" disabled selected>Select</option>
-                        <option value="home">Home</option>
-                        <option value="work">Work</option>
-                    </select>
+                <div class="row g-2">
+                    <div class="col-md">
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" class="form-control" id="email" name="email" required>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="form-group">
+                            <label for="email_use">Email Type</label>
+                            <select class="form-control" id="email_use" name="email_use" required>
+                                <option value="" disabled selected>Select</option>
+                                <option value="home">Home</option>
+                                <option value="work">Work</option>
+                            </select>
+                        </div>
+                    </div>
                 </div>
+
 
 
                 <br>
@@ -96,6 +119,7 @@
                     <button class="button" type="button"
                         onclick="window.location.href='{{ url_for('fhir_patient_list') }}'">Cancel</button>
                 </div>
+
 
             </form>
 
